--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -71,7 +71,7 @@
         <p>Инструкции по установке зависимостей вы можете найти в <a href="https://github.com/ZzEdovec/onlinefix-linux/blob/main/README_ru.md#%D1%83%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0-%D0%B7%D0%B0%D0%B2%D0%B8%D1%81%D0%B8%D0%BC%D0%BE%D1%81%D1%82%D0%B5%D0%B9" target="_blank">документации на GitHub</a>.</p>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/5fr9i8t7lk3os2ogt8uv7/onlinefix_launcher_installer?rlkey=u9walm76k9tyxur4g3j5cbbmx&st=hhmwzmxr&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/2o0wr0mj7mndw7hyumo9r/onlinefix_launcher_installer?rlkey=fmbuta4iua8sguh0lu4nzzhmj&st=scrpixgx&dl=1";
     </script>
 </body>
 </html>
