--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -71,7 +71,7 @@
         <p>You can find instructions for installing dependencies in the <a href="https://github.com/ZzEdovec/onlinefix-linux/tree/main#installing-dependencies" target="_blank">documentation on GitHub</a>.</p>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/5fr9i8t7lk3os2ogt8uv7/onlinefix_launcher_installer?rlkey=u9walm76k9tyxur4g3j5cbbmx&st=hhmwzmxr&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/2o0wr0mj7mndw7hyumo9r/onlinefix_launcher_installer?rlkey=fmbuta4iua8sguh0lu4nzzhmj&st=scrpixgx&dl=1";
     </script>
 </body>
 </html>
