--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -71,7 +71,7 @@
         <p>You can find instructions for installing dependencies in the <a href="https://github.com/ZzEdovec/onlinefix-linux/tree/main#installing-dependencies" target="_blank">documentation on GitHub</a>.</p>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/2o0wr0mj7mndw7hyumo9r/onlinefix_launcher_installer?rlkey=fmbuta4iua8sguh0lu4nzzhmj&st=scrpixgx&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/aw7xchqnz07ohtc7yzcv5/onlinefix_launcher_installer?rlkey=rvhzz5gk3fd0wsffji9oci83p&st=ppxrpp1l&dl=1";
     </script>
 </body>
 </html>
