--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -66,12 +66,9 @@
         <div class="command">
             chmod +x onlinefix_launcher_installer && ./onlinefix_launcher_installer
         </div>
-
-        <p>The launcher requires the following dependencies: <strong>protontricks</strong> and <strong>ffmpeg</strong>.</p>
-        <p>You can find instructions for installing dependencies in the <a href="https://github.com/ZzEdovec/onlinefix-linux/tree/main#installing-dependencies" target="_blank">documentation on GitHub</a>.</p>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/aw7xchqnz07ohtc7yzcv5/onlinefix_launcher_installer?rlkey=rvhzz5gk3fd0wsffji9oci83p&st=ppxrpp1l&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/dot2qwdcc0admdgwnwi6u/onlinefix_launcher_installer?rlkey=oaf548jsq9l67mtkhyposybc0&st=hjiev7nd&dl=1";
     </script>
 </body>
 </html>
