--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -66,12 +66,9 @@
         <div class="command">
             chmod +x onlinefix_launcher_installer && ./onlinefix_launcher_installer
         </div>
-
-        <p>Для работы лаунчера требуются следующие зависимости: <strong>protontricks</strong> и <strong>ffmpeg</strong>.</p>
-        <p>Инструкции по установке зависимостей вы можете найти в <a href="https://github.com/ZzEdovec/onlinefix-linux/blob/main/README_ru.md#%D1%83%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0-%D0%B7%D0%B0%D0%B2%D0%B8%D1%81%D0%B8%D0%BC%D0%BE%D1%81%D1%82%D0%B5%D0%B9" target="_blank">документации на GitHub</a>.</p>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/aw7xchqnz07ohtc7yzcv5/onlinefix_launcher_installer?rlkey=rvhzz5gk3fd0wsffji9oci83p&st=ppxrpp1l&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/dot2qwdcc0admdgwnwi6u/onlinefix_launcher_installer?rlkey=oaf548jsq9l67mtkhyposybc0&st=hjiev7nd&dl=1";
     </script>
 </body>
 </html>
