--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -6,8 +6,8 @@
     <title>Спасибо за загрузку OnlineFix Launcher для Linux!</title>
     <style>
       body {
-        background-color: #121212;  /* Темный фон */
-        color: white;  /* Белый цвет текста */
+        background-color: #121212;
+        color: white;
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/f5gr2q3sd8ec3vhuw4f59/onlinefix_launcher_installer?rlkey=r8mczqj94ozgkeokf7vb8a5to&st=fek8ojij&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/tpgc902817v1xe9un6efr/onlinefix_launcher_installer?rlkey=liv2pr2vws1vlgij8akx12t6s&st=cpo8lk7h&dl=1";
     </script>
 </body>
 </html>
