--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -6,8 +6,8 @@
     <title>Thank you for downloading OnlineFix Launcher for Linux!</title>
     <style>
       body {
-        background-color: #121212;  /* Темный фон */
-        color: white;  /* Белый цвет текста */
+        background-color: #121212;
+        color: white;
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
