--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/xq8ku70lo95y02m8r84ze/onlinefix_launcher_installer?rlkey=mekh1k1a6mu9vthiuiccgmjba&st=fzw8763b&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/l3rmq4sj9wo4yozqqfmvm/onlinefix_launcher_installer?rlkey=93rwtq5uanuamp3tr6coktqov&st=l05fzigr&dl=1";
     </script>
 </body>
 </html>
