--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/l3rmq4sj9wo4yozqqfmvm/onlinefix_launcher_installer?rlkey=93rwtq5uanuamp3tr6coktqov&st=l05fzigr&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/g9i1b1rlu7re4vfhdrlwt/onlinefix_launcher_installer?rlkey=ydz0qajutihegyksqp1bdbxx0&st=5lja4378&dl=1";
     </script>
 </body>
 </html>
