--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/g9i1b1rlu7re4vfhdrlwt/onlinefix_launcher_installer?rlkey=ydz0qajutihegyksqp1bdbxx0&st=5lja4378&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/hnnq81z3095e8hb7u6q8q/onlinefix_launcher_installer?rlkey=vn0dvwfre3wf0pg4otbiwmva7&st=710928uv&dl=1";
     </script>
 </body>
 </html>
