--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/uiang0sjv6yy1hkrg864x/onlinefix_launcher_installer?rlkey=c0nlfju1kum23rkdtd8na9rfy&st=1w7jc0gb&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/30gb4nxzldtcjpxs7vw6t/onlinefix_launcher_installer?rlkey=w46bg7i3alw9s0t4x9xdik5bq&st=19twx7q8&dl=1";
     </script>
 </body>
 </html>
