--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/30gb4nxzldtcjpxs7vw6t/onlinefix_launcher_installer?rlkey=w46bg7i3alw9s0t4x9xdik5bq&st=19twx7q8&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/jahh7a2nzb1hl6zqfu13z/onlinefix_launcher_installer?rlkey=eybkqotjcj0o3f18kasw644cy&st=3wm6vn1t&dl=1";
     </script>
 </body>
 </html>
