--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/jahh7a2nzb1hl6zqfu13z/onlinefix_launcher_installer?rlkey=eybkqotjcj0o3f18kasw644cy&st=3wm6vn1t&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/81hwx32yf6cocp9nja8c4/onlinefix_launcher_installer?rlkey=owvn9e28qyi1lsrs3rs0iae9r&st=w5kwc8ts&dl=1";
     </script>
 </body>
 </html>
