--- a/pages/ofmeThanks.html
+++ b/pages/ofmeThanks.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/81hwx32yf6cocp9nja8c4/onlinefix_launcher_installer?rlkey=owvn9e28qyi1lsrs3rs0iae9r&st=w5kwc8ts&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/pn0n7yutxva7pd3kxradn/onlinefix_launcher_installer?rlkey=mqlvua53owgkqcv0lu0636l4n&st=07v5x4qr&dl=1";
     </script>
 </body>
 </html>
