--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/pn0n7yutxva7pd3kxradn/onlinefix_launcher_installer?rlkey=mqlvua53owgkqcv0lu0636l4n&st=07v5x4qr&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/wd161c8ndiyht6sfrmpuc/onlinefix_launcher_installer?rlkey=0xpo0fg1u5njctg1i5id4vxo0&st=b4tawbei&dl=1";
     </script>
 </body>
 </html>
