--- a/pages/ofmeThanks_en.html
+++ b/pages/ofmeThanks_en.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        window.location.href = "https://www.dropbox.com/scl/fi/wd161c8ndiyht6sfrmpuc/onlinefix_launcher_installer?rlkey=0xpo0fg1u5njctg1i5id4vxo0&st=b4tawbei&dl=1";
+        window.location.href = "https://www.dropbox.com/scl/fi/3ao7069ihiiesgvnx8bxd/onlinefix_launcher_installer?rlkey=g6wb688hfjo8ftac8ktlngy7v&st=yf3z59ac&dl=1";
     </script>
 </body>
 </html>
